syntax = "proto3";

message GetUserBadgesData {
    string id = 1;
}
