syntax = "proto3";

import "Badge/BadgeData.proto";

message UserBadgesData {
    string user_id = 1;
    repeated BadgeData badges = 2;
}
